flesh out programming retreat landing page

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -203,6 +203,10 @@ _________________________ */
   margin-left: 50px;
 }
 
+img {
+  max-width: 100%;
+}
+
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
