--- a/templates/index.html
+++ b/templates/index.html
@@ -35,28 +35,15 @@
 		//--><!]]>
 	</script>
 </div>
+{% include "_nav.html" %}
 
-    <!-- fly-in nav ---------------------------------  -->
-<div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#intro" onclick="closeNav()">Introduction</a>
-  <a href="#about" onclick="closeNav()">About Us</a>
-  <a href="#place" onclick="closeNav()">Our Center</a>
-  <a href="#program" onclick="closeNav()">The Program</a>
-  <!-- <a href="#pricing" onclick="closeNav()">Pricing</a> -->
-</div>
-
-  <!-- Primary Page Layout
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<!-- Primary Page Layout -->
 <div class="container-wide">
 
-    <!-- <section class="topbar" id="topbar">
-        <span onclick="openNav()"><img src="images/hamburger.png" alt="menu"></span>
-    </section> -->
-    <div class="hamburger"><span onclick="openNav()"><img src="images/hamburger.png" alt="menu"></span></div>
+    {% include "_hamburger.html" %}
 
       <section class="hero">
-        <h1><img src="images/frc-logo@2x.png" alt="{{ config.extra.company_name }}" /></h1>
+        <h1><img src="/images/frc-logo@2x.png" alt="{{ config.extra.company_name }}" /></h1>
         <h2>{{ config.extra.tag_line }}</h2>
         </section>
 
@@ -91,10 +78,10 @@
              <div class="row">
                  <div class="six columns text">
                    {{ load_data(path="copy/hosts.md") | markdown | safe }}
-                     <p><a href="https://twitter.com/focusretreats" target="_blank"><img src="images/twitter-icon.png" alt="twitter link"></a> <a href="https://twitter.com/focusretreats" target="_blank" style="color:#67bffd;text-decoration: none;margin-left:5px;">Follow us on Twitter</a></p>
+                     <p><a href="https://twitter.com/focusretreats" target="_blank"><img src="/images/twitter-icon.png" alt="twitter link"></a> <a href="https://twitter.com/focusretreats" target="_blank" style="color:#67bffd;text-decoration: none;margin-left:5px;">Follow us on Twitter</a></p>
                  </div>
                  <div class="six columns">
-                     <img src="images/pete-and-stella.jpg" style="width:100%;" alt="Pete and Stella"/>
+                     <img src="/images/pete-and-stella.jpg" style="width:100%;" alt="Pete and Stella"/>
                  </div>
              </div><!-- row -->      
         </div><!-- row -->
@@ -112,7 +99,7 @@
                {{ load_data(path="copy/about-our-center.md") | markdown | safe }}
                 </div>
                 <div class="five columns">
-                  <p style="margin-top:1em;"><img src="images/frc-building-side.jpg" style="width:100%;" alt="{{ config.extra.company_name }} Building"/></p>
+                  <p style="margin-top:1em;"><img src="/images/frc-building-side.jpg" style="width:100%;" alt="{{ config.extra.company_name }} Building"/></p>
                 </div>    
        </div><!-- row -->
    </section>
@@ -120,13 +107,14 @@
    <section class="contents pine"  id="program">
     <div class="row">
         <div class="six columns">
-            <p><img src="images/frc-building-rear.jpg" style="width:100%;" alt="Our Building, rear view with lot"/></p>
+            <p><img src="/images/frc-building-rear.jpg" style="width:100%;" alt="Our Building, rear view with lot"/></p>
         </div>
         <div class="six columns">
           {{ load_data(path="copy/what-we-offer.md") | markdown | safe }}
         </div>
     </div>
 </section>
+
     
     <section class="contents honey">
         <div class="row">
@@ -134,7 +122,7 @@
                {{ load_data(path="copy/amenities.md") | markdown | safe }}
             </div>
                  <div class="six columns">
-                     <p><img src="images/coffee-and-rolls.jpg" style="width:100%;margin-top:15px;" alt="Fresh baked goods and coffee"/></p>
+                     <p><img src="/images/coffee-and-rolls.jpg" style="width:100%;margin-top:15px;" alt="Fresh baked goods and coffee"/></p>
                  </div>
         </div><!-- row -->
     </section>
@@ -144,17 +132,22 @@
                {{ load_data(path="copy/what-we-dont-offer.md") | markdown | safe }}
         </div>
     </section> 
-    
+
+   <section class="contents blue" id="retreats">
+     <h4>Upcoming Retreats</h4>
+     We are running two <a href="/2022/programming">Programming Retreats</a> in 2022.
+   </section>
+
     <section id="gallery">
         <div class="row">
-            <div class="four columns"><img src="images/gallery/boating2.jpg" alt=""></div>
-            <div class="four columns"><img src="images/gallery/lake-placid-fall.jpg" alt=""></div>
-            <div class="four columns"><img src="images/gallery/mountaintop.jpg" alt=""></div>
+            <div class="four columns"><img src="/images/gallery/boating2.jpg" alt=""></div>
+            <div class="four columns"><img src="/images/gallery/lake-placid-fall.jpg" alt=""></div>
+            <div class="four columns"><img src="/images/gallery/mountaintop.jpg" alt=""></div>
         </div>
          <div class="row">
-            <div class="four columns"><img src="images/gallery/mountain-lake.jpg" alt=""></div>
-            <div class="four columns"><img src="images/gallery/pie.jpg" alt=""></div>
-            <div class="four columns"><img src="images/gallery/river.jpg" alt=""></div>
+            <div class="four columns"><img src="/images/gallery/mountain-lake.jpg" alt=""></div>
+            <div class="four columns"><img src="/images/gallery/pie.jpg" alt=""></div>
+            <div class="four columns"><img src="/images/gallery/river.jpg" alt=""></div>
 
         </div>
     </section>
