--- a/templates/page.html
+++ b/templates/page.html
@@ -2,7 +2,10 @@
   <title>{{ page.title }}</title>
 </head>
   <body>
+    {% include "_nav.html" %}
+    {% include "_hamburger.html" %}
     <div class="container">
+    {% include "_hamburger.html" %}
     {{ page.content | markdown | safe }}
     </div>
   </body>
