Reword tag line and upstate

--- a/templates/_head.html
+++ b/templates/_head.html
@@ -16,13 +16,13 @@
 <!-- Twitter -->
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:description" content="{{ config.extra.company_name }} is a space for personal growth, surrounded by supportive peers, free from distractions."/>
-<meta name="twitter:title" content="{{ config.extra.company_name }} - Immersive work/focus retreats in Upstate New York"/>
+<meta name="twitter:title" content="{{ config.extra.company_name }} - Immersive project/learning retreats in northern New York"/>
 <meta name="twitter:image" content="images/frc-logo.jpg"/><meta name="twitter:site" content="@focusretreats"/>
 
 <!-- Facebook -->
 <meta property="og:url" content="https://focusretreatcenter.com" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="{{ config.extra.company_name }} - Immersive work/focus retreats in Upstate New York" />
+<meta property="og:title" content="{{ config.extra.company_name }} - Immersive project/learning retreats in northern New York" />
 <meta property="og:description" content="{{ config.extra.company_name }} is a space for personal growth, surrounded by supportive peers, free from distractions." />
 <meta property="og:image" content="images/FocusRetreat-cover-1200.jpg" />
 
