--- a/templates/_head.html
+++ b/templates/_head.html
@@ -7,6 +7,7 @@
 
 <!-- Mobile Specific Metas -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="{{ config.extra.company_name }} is a space for personal growth, surrounded by supportive peers, free from distractions.">
 
 <!-- FONT -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
