swap in spring photo of building front

--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
                     {{ load_data(path="copy/imagine.md") | markdown | safe }}
                  </div>
                  <div class="six columns">
-                      <img src="images/frc-at-night-1600.jpg" style="width:100%;" alt="Our building at night in winter"/>
+                      <img src="/images/frc-building-front-20220504.jpg" style="width:100%;" alt="Our building at night in winter"/>
                  </div>
              </div><!-- row -->      
         </div><!-- row -->
@@ -82,6 +82,12 @@
                        <a href="https://twitter.com/focusretreats" target="_blank">
                          <img src="/images/twitter-icon.png" alt="twitter link">
                          &nbsp;Follow us on Twitter
+                     </a>
+                     </p>
+                     <p>
+                       <a href="https://www.instagram.com/focusretreat.center" target="_blank">
+                         <img src="/images/instagram.png" alt="instagram link">
+                         &nbsp;Follow us on Instagram
                      </a>
                      </p>
                      <p>
