Tweak blog style and script

--- a/templates/page.html
+++ b/templates/page.html
@@ -9,7 +9,7 @@
     {{ page.extra.author }}
     {% endif %}
   </div>
-  <div class="two columns">
+  <div class="post-date three columns">
     {{ page.date | date(format="%B %e, %Y", timezone="America/New_York") }}
   </div>
 </div>
