link to facebook page

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,6 +72,12 @@ preload( "images/FocusRetreat-topimage-1600.jpg", "images/frc-logo@2x.png")
             </a>
             </p>
             <p>
+            <a href="https://www.facebook.com/Focus-Retreat-Center-110276811571971" target="_blank">
+               <img src="/images/facebook.png" alt="facebook link">
+               &nbsp;Like us on Facebook
+            </a>
+            </p>
+            <p>
             <a href="https://www.linkedin.com/company/focusretreatcenter" target="_blank">
                <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34" class="global-nav__logo">
                   <title>LinkedIn</title>
