--- a/templates/layout.html
+++ b/templates/layout.html
@@ -58,14 +58,14 @@
   <meta name="twitter:card" content="summary"/>
   <meta name="twitter:description" content="{{ config.extra.company_name }} is a space for personal growth, surrounded by supportive peers, free from distractions."/>
   <meta name="twitter:title" content="{{ config.extra.company_name }} - Immersive project/learning retreats in northern New York"/>
-  <meta name="twitter:image" content="images/frc-logo.jpg"/><meta name="twitter:site" content="@focusretreats"/>
+  <meta name="twitter:image" content="/images/frc-logo.jpg"/><meta name="twitter:site" content="@focusretreats"/>
 
   <!-- Facebook -->
   <meta property="og:url" content="https://focusretreatcenter.com" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="{{ config.extra.company_name }} - Immersive project/learning retreats in northern New York" />
   <meta property="og:description" content="{{ config.extra.company_name }} is a space for personal growth, surrounded by supportive peers, free from distractions." />
-  <meta property="og:image" content="images/FocusRetreat-cover-1200.jpg" />
+  <meta property="og:image" content="/images/frc-building-front-20220504.jpg" />
   {% endblock opengraph -%}
 
   <script>
