use full absolute url for og:image

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -65,7 +65,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="{{ config.extra.company_name }} - Immersive project/learning retreats in northern New York" />
   <meta property="og:description" content="{{ config.extra.company_name }} is a space for personal growth, surrounded by supportive peers, free from distractions." />
-  <meta property="og:image" content="/images/frc-building-front-20220504.jpg" />
+  <meta property="og:image" content="{{ config.base_url| safe }}/images/frc-building-front-20220504.jpg" />
   {% endblock opengraph -%}
 
   <script>
