Move the winter night photo aside.
Trying to clear the og:image cache.
So I have symlinked the night photo path to the
day photo file to hurry that up.

It's confusing but we should be able to
remove the stale symlink once caches are
all clear in a week or so.

--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@ preload( "images/FocusRetreat-topimage-1600.jpg", "images/frc-logo@2x.png")
             {{ load_data(path="copy/imagine.md") | markdown | safe }}
          </div>
          <div class="six columns">
-            <img src="/images/frc-building-front-20220504.jpg" style="width:100%;" alt="Our building at night in winter"/>
+            <img src="/images/frc-building-front-20220504.jpg" style="width:100%;" alt="Our building in May 2022"/>
          </div>
       </div><!-- row -->      
    </div><!-- row -->
