--- a/templates/layout.html
+++ b/templates/layout.html
@@ -99,10 +99,12 @@
 
   {% block body -%}
   {% endblock -%}
-  <footer class="row offset-by-one column">
-    <hr>
+  <footer>
+    <div class="row">
+  <img class="logo-inline offset-by-three six columns" src="/images/frc-logo-inline-color-500.png" alt="Focus Retreat Center Logo"/>
+  </div>
     {% block footer -%}
-    <div class="navigation">
+    <div class="navigation row offset-by-one column">
       {% include "partials/nav.html" -%}
     </div>
     {% endblock -%}
