Update home page and nav for upcoming retreats

--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -2,6 +2,6 @@
 <a href="/#about" onclick="closeNav()">About Us</a>
 <a href="/#place" onclick="closeNav()">Our Center</a>
 <a href="/#program" onclick="closeNav()">The Program</a>
-<a href="/#retreats" onclick="closeNav()">Upcoming Retreats</a>
+<a href="/2022/programming" onclick="closeNav()">Upcoming Retreats</a>
 <a href="/blog" onclick="closeNav()">Blog</a>
 <!-- <a href="/#pricing" onclick="closeNav()">Pricing</a> -->
