--- a/sass/custom.css
+++ b/sass/custom.css
@@ -26,7 +26,7 @@ section.hero {
   color:black;
   margin-top: 40px;
   margin-bottom:60px;
-  background: rgb(255,255,255, 0.6);
+  background: rgba(255,255,255, 0.6);
   font-size:3.8rem;
   padding-top:8px;
   padding-bottom:8px;
