Inline logo looks fuzzy when scaled up
Fix max width to the image file's natural size

--- a/sass/custom.css
+++ b/sass/custom.css
@@ -229,7 +229,7 @@ footer > .navigation > a {
 
 .logo-inline {
   margin-top: 2rem;
-  max-width: 80vw;
+  max-width: 500px;
 }
 
 /* mobile flow */
