Add team page with bio blurb, title, and photo

--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -2,6 +2,7 @@
 <a href="/#about" onclick="closeNav()">About Us</a>
 <a href="/#place" onclick="closeNav()">Our Center</a>
 <a href="/#program" onclick="closeNav()">The Program</a>
+<a href="/team" onclick="closeNav()">Team</a>
 <a href="/2022/programming" onclick="closeNav()">Upcoming Retreats</a>
 <a href="/blog" onclick="closeNav()">Blog</a>
 <!-- <a href="/#pricing" onclick="closeNav()">Pricing</a> -->
