--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,12 @@ preload( "images/FocusRetreat-topimage-1600.jpg", "images/frc-logo@2x.png")
 <section class="hero">
    <h1><img src="/images/frc-logo@2x.png" alt="{{ config.extra.company_name }}" /></h1>
    <h2>{{ config.extra.tag_line }}</h2>
+   <div class="row">
    <a class="button button-primary myButton" href="/2022/programming">Upcoming programming retreats</a>
+   </div>
+   <div class="row">
+   <a class="button button-primary myButton homeCTA" href="/2022/bar-exam">Bar Exam Study Retreat</a>
+   </div>
 </section>
 
 <section class="callout-text blue lesswide" id="intro">
