--- a/sass/custom.css
+++ b/sass/custom.css
@@ -208,6 +208,11 @@ img {
   max-width: 100%;
 }
 
+/* Fix mailchimp signup on small screens */
+#mc_embed_signup {
+  max-width: 100vw;
+}
+
 /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
