--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -3,6 +3,6 @@
 <a href="/#place" onclick="closeNav()">Our Center</a>
 <a href="/#program" onclick="closeNav()">The Program</a>
 <a href="/team" onclick="closeNav()">Team</a>
-<a href="/2022/programming" onclick="closeNav()">Upcoming Retreats</a>
+<a href="/" onclick="closeNav()">Upcoming Retreats</a>
 <a href="/blog" onclick="closeNav()">Blog</a>
 <!-- <a href="/#pricing" onclick="closeNav()">Pricing</a> -->
