use newer photo for Pete & Stella on home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -96,7 +96,7 @@ preload( "images/FocusRetreat-topimage-1600.jpg", "images/frc-logo@2x.png")
             </p>
          </div>
          <div class="six columns">
-            <img src="/images/pete-and-stella.jpg" style="width:100%;" alt="Pete and Stella"/>
+            <img src="/images/photoshoot-202205/ck-pl-hex01-crop.jpg" style="width:100%;" alt="Pete and Stella"/>
          </div>
       </div><!-- row -->      
    </div><!-- row -->
