fix horizontal scroll due to skeleton mistake

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -124,8 +124,10 @@
   <img class="logo-inline offset-by-three six columns" src="/images/frc-logo-inline-color-500.png" alt="Focus Retreat Center Logo"/>
   </div>
     {% block footer -%}
-    <div class="navigation row offset-by-one column">
+    <div class="navigation row">
+      <div class="offset-by-one eleven columns">
       {% include "partials/nav.html" -%}
+      </div>
     </div>
     {% endblock -%}
   </footer>
