Add Code of Conduct

--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -6,4 +6,5 @@
 <a href="/team" onclick="closeNav()">Team</a>
 <a href="/" onclick="closeNav()">Upcoming Retreats</a>
 <a href="/blog" onclick="closeNav()">Blog</a>
+<a href="/conduct" onclick="closeNav()">Code of Conduct</a>
 <!-- <a href="/#pricing" onclick="closeNav()">Pricing</a> -->
