list illustration as a retreat topic on home page

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -48,7 +48,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta name="description" content="{{ config.extra.company_name }} is a space for personal growth, surrounded by supportive peers, free from distractions.">
-  <meta name="keywords" content="retreats programming adirondacks coding writing immersive malone ny">
+  <meta name="keywords" content="retreats programming adirondacks coding illustration drawing writing immersive malone ny">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
   {% endblock meta -%}
