--- a/templates/layout.html
+++ b/templates/layout.html
@@ -120,9 +120,7 @@
   {% block body -%}
   {% endblock -%}
   <footer>
-    <div class="row">
-  <img class="logo-inline offset-by-three six columns" src="/images/frc-logo-inline-color-500.png" alt="Focus Retreat Center Logo"/>
-  </div>
+  <img style="max-width: 300px" class="logo-inline" src="/images/frc-logo-inline-color-500.png" alt="Focus Retreat Center Logo"/>
     {% block footer -%}
     <div class="navigation row">
       <div class="offset-by-one eleven columns">
