Add phone number to home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -172,11 +172,14 @@ preload( "images/FocusRetreat-topimage-1600.jpg", "images/frc-logo@2x.png")
 
 <section class="contents charcoal" id="pricing">
    <div class="row myTitle">
-      <div class="six columns">
+      <div class="four columns">
          <h2>More Info</h2>
       </div>
-      <div class="six columns" style="text-align: center;">
+      <div class="four columns" style="text-align: center;">
          <a class="button button-primary myButton" href="mailto:info@focusretreatcenter.com?subject=Website Retreat Inquiry">Contact us for more info</a>
+      </div>
+      <div class="four columns phone">
+         <a href="tel:+15183108879">518-310-8879</a>
       </div>
    </div>
 </section>
