Embed Enrollsy for ticketing for Inktober

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@ preload( "images/FocusRetreat-topimage-1600.jpg", "images/frc-logo@2x.png")
    <h1><img src="/images/frc-logo@2x.png" alt="{{ config.extra.company_name }}" /></h1>
    <h2>{{ config.extra.tag_line }}</h2>
    <div class="row">
-   <a class="button button-primary myButton" href="/2022/programming">Programming Retreats</a>
+   <a class="button button-primary myButton" href="/2022/inktober">Inktober Challenge Retreat</a>
    </div>
 </section>
 
