--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,9 @@ preload( "images/FocusRetreat-topimage-1600.jpg", "images/frc-logo@2x.png")
    <h1><img src="/images/frc-logo@2x.png" alt="{{ config.extra.company_name }}" /></h1>
    <h2>{{ config.extra.tag_line }}</h2>
    <div class="row">
-   <a class="button button-primary myButton" href="/2022/inktober">Inktober Challenge Retreat</a>
+      <a href="https://ink.focusretreat.center"><img src="/images/inktober-2022/inktober-frc-logos.png" alt="Inktober and FRC logos"></a>
+      <h3>This October we are running a very special retreat for artists doing the Inktober Challenge.</h3>
+      <a class="button myButton" href="https://ink.focusretreat.center">Click here for details!</a>
    </div>
 </section>
 
