Reorganize blog for asset colocation
- This requires trailing_slash=true which I don't really like but
  assett colocation really is a nicer way to keep photos and blog posts
  together, so accept it
- Added a new blog post about the August Programming Retreat
- Updated new-post.sh with the new filesystem layout

--- a/templates/post-list.html
+++ b/templates/post-list.html
@@ -27,7 +27,7 @@
       <div class="title one column"></div>
       <a
         class="eight columns"
-        href="/{{ page.components[0] | safe }}/{{ page.slug | safe }}"
+        href="{{ page.path }}"
         >{{ page.title }}</a
       >
       <div class="date three columns">{{ page.date | date(format="%B %e, %Y") }}</div>
