Use latest Inktober retreat logo

--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@ preload( "images/FocusRetreat-topimage-1600.jpg", "images/frc-logo@2x.png")
    <h1><img src="/images/frc-logo@2x.png" alt="{{ config.extra.company_name }}" /></h1>
    <h2>{{ config.extra.tag_line }}</h2>
    <div class="row">
-      <a href="https://ink.focusretreat.center"><img style="width: 478px;" src="/images/inktober-2022/inktober-adirondacks.png" alt="Inktober and FRC logos"></a>
+      <a href="https://ink.focusretreat.center"><img style="max-width: 75vw;" src="/images/inktober-2022/inktober-2022-in-the-adirondacks.png" alt="Inktober and FRC logos"></a>
       <h3>This October we are running a very special retreat for artists doing the Inktober Challenge.</h3>
       <a class="button myButton" href="https://ink.focusretreat.center">Click here for details!</a>
    </div>
