--- a/templates/layout.html
+++ b/templates/layout.html
@@ -123,7 +123,7 @@
   <img style="max-width: 300px" class="logo-inline" src="/images/frc-logo-inline-color-500.png" alt="Focus Retreat Center Logo"/>
     {% block footer -%}
     <div class="navigation row">
-      <div class="offset-by-one eleven columns">
+      <div class="twelve columns">
       {% include "partials/nav.html" -%}
       </div>
     </div>
