Make mailchimp signup work as both include and shortcode with symlink

--- a/templates/index.html
+++ b/templates/index.html
@@ -159,7 +159,7 @@ preload( "images/FocusRetreat-topimage-1600.jpg", "images/frc-logo@2x.png")
 <section> 
    <!-- landscape picture -->
    <div class="row">
-      {% include "mailchimp-signup.html" %}
+      {% include "mailchimp.html" %}
    </div>
 </section>
 
