--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@ preload( "images/FocusRetreat-topimage-1600.jpg", "images/frc-logo@2x.png")
       {{ load_data(path="copy/intro.md") | markdown | safe }}
    </div>
 </section>
-    
+
 <section class="contents">
    <div class="row">
       <div class="row">
@@ -47,7 +47,22 @@ preload( "images/FocusRetreat-topimage-1600.jpg", "images/frc-logo@2x.png")
       </div><!-- row -->      
    </div><!-- row -->
 </section>
-    
+
+<section class="contents pic2">
+   <div class="row">
+         <h2 id="program">2023 Retreat Programs</h2>
+<ul class="programs">
+   <li><a href="/2023/programming/">Programming Retreats for 2023</a></li>
+   <li><a href="/2023/inktober/">InkTober Retreats for 2023</a></li>
+</ul>
+
+<h3>Winter Residencies</h3>
+
+<p>
+We don't run retreats in the winter off season, but we do have residencies available if you are interested in a change of scene and coliving with other creative people for a few weeks/months during the 2022/2023 winter. Email us at <a href="mailto:info@focusretreatcenter.com?subject=Winter Residency Inquiry">info@focusretreatcenter.com</a> if you might be interested.
+</p>
+   </div><!-- row -->
+</section>    
 <section class="callout-text lightblue">
    <div class="row">
       <h3>{{ load_data(path="copy/grind.md") | markdown | safe }}</h3>
@@ -113,7 +128,7 @@ preload( "images/FocusRetreat-topimage-1600.jpg", "images/frc-logo@2x.png")
    </div><!-- row -->
 </section>
 
-<section class="contents pine"  id="program">
+<section class="contents pine"  id="offer">
    <div class="row">
       <div class="six columns">
          <p><img src="/images/frc-building-rear.jpg" style="width:100%;" alt="Our Building, rear view with lot"/></p>
