--- a/templates/shortcodes/photo.html
+++ b/templates/shortcodes/photo.html
@@ -1,4 +1,4 @@
-<figure>
-   <img src="" alt="{{caption}}">
-   <figcaption>{{caption}}</figcaption>
+<figure class="photo">
+   <img src="{{src}}" alt="{{caption | trim}}">
+   <figcaption>{{caption | trim}}</figcaption>
 </figure>
