--- a/templates/shortcodes/youtube.html
+++ b/templates/shortcodes/youtube.html
@@ -1,3 +1,3 @@
 <div class="youtube-video-container">
-<iframe src="//www.youtube.com/embed/{{id}}" allowfullscreen></iframe>
+<iframe src="https://www.youtube-nocookie.com/embed/{{id}}" allowfullscreen></iframe>
 </div>
