Add button for enrollsy sign in and payments

--- a/templates/index.html
+++ b/templates/index.html
@@ -196,4 +196,14 @@ We don't run retreats in the winter off season, but we do have residencies avail
    </div>
 </section>
 
+<section class="contents brick" id="signin">
+   <h2>Need to...?</h2>
+   <ul>
+      <li>Make a payment</li>
+      <li>Set up automatic payments</li>
+      <li>Update your profile</li>
+   </ul>
+   <a class="button button-primary myButton" href="/signin">Sign In</a>
+</section>
+
 {% endblock -%}
