--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -3,6 +3,7 @@
 <a href="/#place" onclick="closeNav()">Our Center</a>
 <a href="/#program" onclick="closeNav()">The Program</a>
 <a href="/photos" onclick="closeNav()">Photos</a>
+<a href="/signin" onclick="closeNav()">Sign In</a>
 <a href="/team" onclick="closeNav()">Team</a>
 <a href="/blog" onclick="closeNav()">Blog</a>
 <a href="/conduct" onclick="closeNav()">Code of Conduct</a>
