Progress on CSS grid responsive layout

--- a/sass/frc.scss
+++ b/sass/frc.scss
@@ -1,9 +1,12 @@
-.blue {
-  background-color: blue;
-  color: white;
-}
 
 .green {
   background-color: green;
   color: yellow;
 }
+
+.callout-text {
+  text-align: center;
+  margin:0;
+  padding: 6rem 7%;
+}
+.blue {background-color: #01286e;color:white;}
